[package]
name = "rustotp_cli"
version = "0.1.0"
authors = [
  "Ryan De Villa <ryand@nulogy.com>",
  "Justin Fitzsimmons <justinf@nulogy.com>"
]

[dependencies]
docopt = "0.7"
chrono = "0.2"
rust-crypto = "^0.2"
rustc-serialize = "0.3"
rustotp = { version = "0.1.0", path = "../rustotp" }
base32 = "0.3"

[[bin]]
name = "rustotp_cli"
path = "bin/main.rs"
